Updated few JS and CSS

--- a/check-out.html
+++ b/check-out.html
@@ -409,7 +409,7 @@
                                     <th style="width:45%">Items</th>
                                     <th style="width:10%">Price</th>
                                     <th style="width:20%;text-align:center;">Quantity</th>
-                                    <th style="width:25%" class="text-center">Subtotal</th>
+                                    <th style="width:25%" class="text-right">Subtotal</th>
                                 </tr>
                             </thead>
                             <tbody id="checkOutItemsList">
@@ -483,8 +483,8 @@
     <div class="itemRowCheckoutTotals hidden">
         <table>
             <tr>
-                <td colspan="2"></td>
-                <td class="text-left itemRowCheckoutTotalsText">Sub Total</td>
+                <td colspan="2" class="hidden-xs"></td>
+                <td class="text-left itemRowCheckoutTotalsText hidden-xs">Sub Total</td>
                 <td data-th="Subtotal" class="text-right itemRowTotal itemRowCheckoutAmount"><span class="WebRupee">Rs.</span> 266</td>
             </tr>
         </table>
