--- a/index1.html
+++ b/index1.html
@@ -280,9 +280,9 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                         <div class="customize clearCart" title="Click to clear all cart items">Clear Cart</div>
                         <div class="calc">
 						<div><div class="left">Sub Total</div><div class="right subtotal">0.00</div></div>
-						<div><div class="left">Delivery Free</div><div class="right delivery">0.00</div></div>
-						<div><div class="left">Container Charges (+)</div><div class="right container_charges">0.00</div></div>
-						<div><div class="left">Service Tax(+)</div><div class="right service_tax">0.00</div></div>
+						<!--<div><div class="left">Delivery Free</div><div class="right delivery">0.00</div></div>
+						<div><div class="left">Container Charges (+)</div><div class="right container_charges">0.00</div></div>-->
+						<div><div class="left">Tax (+)</div><div class="right service_tax">0.00</div></div>
 						<div><div class="left">Rounded Off (+/-) </div><div class="right rounded_off">0.00</div></div>
 						<div class="totalAmount row">
 							<span class="col-md-5">Total</span>
@@ -290,7 +290,8 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
 						</div>
 					</div>
                         <hr class="hrLine">
-                        <div id="checkout" class="col-md-8">Proceed to Checkout</div>
+                        <div id="checkout" class="col-md-8 hidden">Proceed to Checkout</div>
+						<div id="checkoutDisabled" class="col-md-8">Add Items to Proceed Checkout</div>
                     </div>
                 </div>
             </div>
