Updated Tracking order

--- a/my-orders.html
+++ b/my-orders.html
@@ -39,6 +39,8 @@
 
 
     <div class="se-pre-con"></div>
+		<div class="ajax-loader" style="display: none"></div>
+
     <div class="messagesBar"></div>
 
     <div class="container-fluid ">
@@ -207,6 +209,7 @@
         <!--End Model OTP-->
 		<div class="container">
 			<div class="row setup-content ordersContainer" id="step-2">
+			<h2>My Orders</h2>
 				<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 					<div class="panel panel-default myorders-panel">
 						
