--- a/track-orders.html
+++ b/track-orders.html
@@ -39,6 +39,7 @@
 
 
     <div class="se-pre-con"></div>
+	<div class="ajax-loader" style="display: none"></div>
     <div class="messagesBar"></div>
 
     <div class="container-fluid ">
@@ -207,6 +208,7 @@
         <!--End Model OTP-->
 		<div class="container">
 			<div class="row setup-content ordersContainer" id="step-2">
+				<h2>Track your orders</h2>
 				<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 					<div class="panel panel-default myorders-panel">
 						
@@ -323,7 +325,7 @@
 		});
         $('#paymentMode').tabCollapse();
     </script>
-    <script src="custom/js/myorders.js"></script>
+    <script src="custom/js/trackorders.js"></script>
     <style>
 		.ordersContainer{
 			margin-top:30px;
