Updated code as on 10th july

--- a/check-out.html
+++ b/check-out.html
@@ -420,9 +420,11 @@
                                     <td class="text-right checkoutTotalAmount" col-span="4"></td>
                                 </tr>
                                 <tr>
-                                    <td><a href="index.html" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continue Shopping</a></td>
+                                    <td><a href="index.html" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continue Shoppingaaa</a></td>
                                     <td colspan="2" class="hidden-md hidden-sm hidden-xs "></td>
                                     <td class="hidden-md hidden-sm hidden-xs text-right checkoutTotalAmount"></td>
+									
+									<input type="hidden" class="cartFinalAmountForOrderRef" value="" />
                                     <td><a href="#" id="activate-payment" class="btn btn-primary btn-block">Proceed Payment<i class="fa fa-angle-right"></i></a></td>
                                 </tr>
                             </tfoot>
