--- a/my-orders.html
+++ b/my-orders.html
@@ -256,7 +256,8 @@
 				</table>
 			</div>
 		</div>
-		<button id="customizeFoodBut">Update &amp; Add to Cart</button><input type="hidden" id="current_product_code" value="1001"><input type="hidden" id="current_product_name" value="Tomato Soup"><input type="hidden" id="current_product_qty" value="2">
+		<div class="placeOrderDetails hidden"></div>
+		<button class="placeOrder btn btn-primary pull-right">Place this order again</button>
 	</div>
 	<div class="itemRowCheckout hidden">
         <table>
