Order logic updated

--- a/track-orders.html
+++ b/track-orders.html
@@ -245,9 +245,9 @@
 					<thead>
 						<tr>
 							<th style="width:45%">Items</th>
-							<th style="width:10%">Price</th>
+							<!-- <th style="width:10%">Price</th> -->
 							<th style="width:20%;text-align:center;">Quantity</th>
-							<th style="width:25%" class="text-right">Subtotal</th>
+							<!-- <th style="width:25%" class="text-right">Subtotal</th> -->
 						</tr>
 					</thead>
 					<tbody class="checkOutItemsList"></tbody>
@@ -266,13 +266,13 @@
                             <h4 class="nomargin itemRowPname"></h4></div>
                     </div>
                 </td>
-                <td data-th="Price" class="itemRowPrice"></td>
+                <!-- <td data-th="Price" class="itemRowPrice"></td> -->
                 <td data-th="Quantity" class="itemRowQuantity"></td>
-                <td data-th="Subtotal" class="text-right itemRowTotal"></td>
+                <!-- <td data-th="Subtotal" class="text-right itemRowTotal"></td> -->
             </tr>
         </table>
     </div>
-    <div class="itemRowCheckoutTotals hidden">
+   <!--  <div class="itemRowCheckoutTotals hidden">
         <table>
             <tr>
                 <td colspan="2" class="hiddenMobileBig"></td>
@@ -280,7 +280,7 @@
                 <td data-th="Subtotal" class="text-right itemRowTotal itemRowCheckoutAmount"><span class="WebRupee">Rs.</span> 266</td>
             </tr>
         </table>
-    </div>
+    </div> -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="vendor/js/jquery-1.11.3.min.js"></script>
     <!--<script src="custom/js/SocialLogin.js"></script>
