fixed menu item

--- a/index1.html
+++ b/index1.html
@@ -69,8 +69,8 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                             </span>
                             
                             <a href="#" class="links-active" data-toggle="modal" data-target="#loginScreen" id="sign-up-button">Sign-in / Sign-up</a></li>
-                            <li><a href="#" class="showMenu-Mobile links-active profile visible-xs hidden-xs" id="profile-Mobile">Profile</a></li>
-                            <li><a href="#" class="showMenu-Mobile links-active logout visible-xs hidden-xs" id="logout-Mobile">Logout</a></li>
+                            <li><a href="#" class="showMenu-Mobile links-active profile" id="profile-Mobile">Profile</a></li>
+                            <li><a href="#" class="showMenu-Mobile links-active logout" id="logout-Mobile">Logout</a></li>
                        
                     </ul>
                 </div>
