--- a/check-out.html
+++ b/check-out.html
@@ -424,7 +424,7 @@
                                     <td colspan="2" class="hidden-md hidden-sm hidden-xs "></td>
                                     <td class="hidden-md hidden-sm hidden-xs text-right checkoutTotalAmount"></td>
 									
-									<input type="hidden" class="cartFinalAmountForOrderRef" value="" />
+									<!-- <input type="hidden" class="cartFinalAmountForOrderRef" value="" /> -->
                                     <td><a href="#" id="activate-payment" class="btn btn-primary btn-block">Proceed to Payment<i class="fa fa-angle-right"></i></a></td>
                                 </tr>
                             </tfoot>
@@ -471,7 +471,7 @@
             <tr>
                 <td data-th="">
                     <div class="row">
-                        <div class="col-sm-2 hidden-xs"><img src="./custom/images/food/C.jpg" alt="..." class="itemRowImage img-responsive" /></div>
+                        <div class="col-sm-2 hidden-xs"><img src="./custom/images/food/C.jpg" alt="..." class="itemRowImage img-responsive-checkout" /></div>
                         <div class="col-sm-6">
                             <h4 class="nomargin itemRowPname"></h4></div>
                     </div>
