--- a/index.html
+++ b/index.html
@@ -353,18 +353,50 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
 	<div class="modal-dialog">
 		<div class="modal-content" style="width: 100%;">
 			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-			</div>
-			<div class="modal-body" style="height: 320px;">
+                    <button type="button" class="close bgwhite" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h4 class="modal-title">We are here !</h4>
+            </div>
+            <div class="modal-body" style="height: 320px;">
 				<embed src="map.html" width="100%" height="100%"></embed>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="modal fade" id="aboutUsScreen" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content" style="width: 100%;">
+			<div class="modal-header">
+                    <button type="button" class="close bgwhite" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h4 class="modal-title">About Us !</h4>
+            </div>
+            <div class="modal-body" style="height: 320px;">
+				We are serving yummy food at low cost. We served the food as you like by customizing the food while order.
+			</div>
+		</div>
+	</div>
+</div>
+<div class="modal fade" id="contactUsScreen" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content" style="width: 100%;">
+			<div class="modal-header">
+                    <button type="button" class="close bgwhite" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h4 class="modal-title">We are available to serve yummy food !</h4>
+            </div>
+            <div class="modal-body" style="height: 320px;">
+				Phone: 040 - 3443434
+				Mobile: 9090909090				
 			</div>
 		</div>
 	</div>
 </div>
 
 <nav class="navbar navbar-inverse navbar-bottom" style="min-height: 30px;">
-            <div class="container">
+            <div class="container" style="text-align: center">
 				<a href="#" class="footer-link" data-toggle="modal" data-target="#mapGoogleScreen" id="mapGoogleScreen">Where we are?</a></li>
+				<a href="#" class="footer-link space" data-toggle="modal" data-target="#aboutUsScreen" id="aboutUsScreen">What we are?</a></li>
+				<span class="footer-link">&copy; All rights reserved </span>
+				<a href="#" class="footer-link" data-toggle="modal" data-target="#contactUsScreen" id="contactUsScreen">Want to Reach Us?</a></li>
+				<a href="#" class="footer-link" data-toggle="modal" data-target="#contactUsScreen" id="conditionsScreen">Know Do's Dont's</a></li>
             </div>
 </nav>
 <input type="hidden" id="statusFlag" />
@@ -379,7 +411,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
     <script src="vendor/js/jquery.sidr.min.js"></script>
     <script src="vendor/js/jquery.touchwipe.js"></script>
     <script src="custom/js/items1.js"></script>
-    <script src="custom/js/script1.js"></script>
+    <script src="custom/js/script.js"></script>
     <script>
         $(document).ready(function() {
 			if ($(document).width() <= 1023) {
