Order placed successfully

--- a/check-out.html
+++ b/check-out.html
@@ -541,7 +541,7 @@
 		});
         $('#paymentMode').tabCollapse();
     </script>
-    <script src="custom/js/script1.js"></script>
+    <script src="custom/js/script.js"></script>
     <style>
         .address {
             border: 0px !important;
