--- a/check-out.html
+++ b/check-out.html
@@ -228,7 +228,7 @@
                                 <p class="list-group-item-text">Take a Glance of your food</p>
                             </a>
                         </li>
-                        <li class="disabled">
+                        <li class="">
                             <a href="#step-3">
                                 <h4 class="list-group-item-heading">Payment</h4>
                                 <p class="list-group-item-text">Secure Payment with ICICI Gateway</p>
@@ -455,7 +455,7 @@
                             <p>Have your card ready for the swipe and have you food</p>
                         </div>
                         <div class="tab-pane fade" id="mc">
-                            <p>6% extra when you use your food coupns</p>
+                            <p>6% extra when you use your food coupons</p>
                         </div>
                         <div class="tab-pane fade" id="ib">
                             <!-- <p>Use our secured payment gate way for the payment</p> -->
