--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
                                     <div class="input-group input-group-lg">
                                         <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
-                                        <input type="text" class="form-control phoneNo" name="username" placeholder="9705984789">
+                                        <input type="text" class="form-control phoneNo" name="username" placeholder="Enter Phone Number">
                                     </div>
                                     <span class="help-block"></span>
 
@@ -231,7 +231,7 @@
                                     </div>
                                     <div class="input-group input-group-lg sendOTPForm ">
                                         <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
-                                        <input type="text" class="form-control phNumberForOTP" name="username" placeholder="9705984789">
+                                        <input type="text" class="form-control phNumberForOTP" name="username" placeholder="Enter Phone Number">
                                     </div>
                                     <span class="OTP-error-block"></span>
                                     <div class="col-xs-12 col-sm-6">
