Cosmetic changes done
1) hover effect for contact page icons
2) hamberger menu with burger icon
3) footer links responsive
4) cart count responsive isseue total was getting mixed with the content

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <img src="custom/images/Categorie.png" class="navToggle img-responsive img-circle">
+                        <img src="custom/images/hambruger.png" class="navToggle img-responsive img-circle">
                     </button>
                     <a class="navbar-brand" href="index.html"><img class="logo" alt="Brand" src="custom/images/logo.png"></a>
                 </div>
@@ -455,12 +455,16 @@
 </div>
 
 <nav class="navbar navbar-inverse navbar-bottom" style="min-height: 30px;">
-            <div class="container" style="text-align: center">
-				<a href="#" class="footer-link" data-toggle="modal" data-target="#mapGoogleScreen" id="mapGoogleScreen">Where we are?</a></li>
-				<a href="#" class="footer-link space" data-toggle="modal" data-target="#aboutUsScreen" id="aboutUsScreen">What we are?</a></li>
-				<span class="footer-link">&copy; All rights reserved </span>
-				<a href="#" class="footer-link" data-toggle="modal" data-target="#contactUsScreen" id="contactUsScreen">Want to Reach Us?</a></li>
-				<a href="#" class="footer-link" data-toggle="modal" data-target="#contactUsScreen" id="conditionsScreen">Know Do's Dont's</a></li>
+            <div class="container">
+                <div class="row footer-link">
+                <a href="#" class="col-md-1 hidden-xs"></a>                
+				<a href="#" class="col-md-2 col-xs-6" data-toggle="modal" data-target="#mapGoogleScreen" id="mapGoogleScreen">Where we are?</a></li>
+				<a href="#" class="col-md-2 col-xs-6" data-toggle="modal" data-target="#aboutUsScreen" id="aboutUsScreen">What we are?</a></li>
+				<span class="col-md-2 col-xs-12">&copy; All rights reserved </span>
+				<a href="#" class="col-md-2 col-xs-6" data-toggle="modal" data-target="#contactUsScreen" id="contactUsScreen">Want to Reach Us?</a></li>
+				<a href="#" class="col-md-2 col-xs-6" data-toggle="modal" data-target="#contactUsScreen" id="conditionsScreen">Know Do's Dont's</a></li>
+                <a href="#" class="col-md-1 hidden-xs"></a>                
+            </div>
             </div>
 </nav>
 <input type="hidden" id="statusFlag" />
