--- a/test.html
+++ b/test.html
@@ -8,17 +8,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Stummy</title>
 
-    <!-- Bootstrap -->
-    <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
-    <link href="custom/css/style1.css" rel="stylesheet">
-    <link href="vendor/css/bootstrap-dialog.min.css" rel="stylesheet">
-    <link rel="icon" type="image/png" href="custom/images/favicon.png">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+ 
     <style>
         .row {
             text-align: center !important;
@@ -51,21 +41,27 @@
     <script>
         $(document).ready(function() {
 
-            var hoverImageSwap = function() {
+            var sourceSwap = function() {
               var $this = $(this);
                 var newSource = $this.data("hover");
                 $this.data('hover', $this.attr('src'));
                 $this.attr('src', newSource);
             }
-
-               $('.hovereffect').hover(hoverImageSwap, hoverImageSwap);
-       
+           setTimeout(function(){
+               $('.hovereffect').hover(sourceSwap, sourceSwap);
+           },0);
+         $("p").hover(function(){
+        $(this).css("background-color", "yellow");
+        }, function(){
+        $(this).css("background-color", "pink");
+    });
 
         });
     </script>
 </head>
 
-<body class="index">
+<body>
+    <p>yes</p>
     <div class="container">
         <div>
             <h1><center>Contact Tummy</center></h1>
@@ -78,31 +74,31 @@
             <div class="col-lg-2 col-md-6 col-xs-4">
                 <a href="mailto:mailus@tummykart.com" target="_blank">
                     <!-- <img class="bottom" src="./custom/images/mailhover.png" alt="Send Mail"> -->
-                    <img class="hovereffect" data-hover="./custom/images/mailhover.png" src="./custom/images/mail.png" alt="Mail us">
+                    <img class="hovereffect" src="./custom/images/mail.png" alt="Mail us">
                     <h4>EMAIL</h4> Mail us
                 </a>
             </div>
             <div class="col-lg-2 col-md-6 col-xs-4">
-                <img class="hovereffect" data-hover="./custom/images/phonehover.png" src="./custom/images/phone.png" alt="Call us">
+                <img class="hovereffect" data-hover="phonehover" src="./custom/images/phone.png" alt="Call us">
                 <h4>PHONE</h4> 9090909090
             </div>
             <div class="col-lg-2 col-md-6 col-xs-4">
                 <a href="https://www.facebook.com/tummykart" target="_blank">
-                    <img class="hovereffect" data-hover="./custom/images/fbhover.png" src="./custom/images/fb.png" alt="Follow us">
+                    <img class="hovereffect" data-hover="fbhover" src="./custom/images/fb.png" alt="Follow us">
                     <h4>FACEBOOK</h4> Follow us
                 </a>
 
             </div>
             <div class="col-lg-2 col-md-6 col-xs-4">
                 <a href="http://twitter.com/tummykart" target="_blank">
-                    <img class="hovereffect" data-hover="./custom/images/twitterhover.png" src="./custom/images/twitter.png" alt="Tweet us">
+                    <img class="hovereffect" data-hover="twitterhover" src="./custom/images/twitter.png" alt="Tweet us">
                     <h4>Twitter</h4> Tweet us
                 </a>
 
             </div>
             <div class="col-lg-2 col-md-6 col-xs-4">
                 <a href="https://plus.google.com/u/4/105006622366319030381/posts?hl=en">
-                    <img class="hovereffect" data-hover="./custom/images/googleplushover.png" src="./custom/images/googleplus.png" alt="Write us">
+                    <img class="hovereffect" data-hover="googleplus" src="./custom/images/googleplus.png" alt="Write us">
                     <h4>Google+</h4> Write us
                 </a>
 
