--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-					<li><span class="glyphicon glyphicon-shopping-cart navToggle hidden-xs visible-sm" id='shopping-cart' data-toggle="modal" data-target="#cartModel" aria-hidden="true" style="margin-right:10px; color: white;" ></span></li>
+					<li><span class="glyphicon glyphicon-shopping-cart navToggle hidden-xs visible-sm" id='shopping-cart' data-toggle="modal" data-target="#cartModel" aria-hidden="true" style="margin-right:5px; color: white;" ></span></li>
                         <li>
                             <span id="welcomeMsg">
 							   <span class="glyphicon glyphicon-shopping-cart navToggle hidden-xs" id='shopping-cart' data-toggle="modal" data-target="#cartModel" aria-hidden="true"><p>Cart</p> </span>
@@ -197,7 +197,7 @@
 
                                         <div class="col-xs-12 col-sm-6">
                                             <p class="omb_forgotPwd">
-                                                <a href="#" id="otpLink">Generate OTP/Forgot password?</a>
+                                                <a href="#" id="otpLink">Change / Forgot password?</a>
                                             </p>
                                         </div>
                                         <div class="col-xs-12 col-sm-3">
