Check out commit
profile icon circle in responsive
extra cart button removed
edit adress only one icon enabled
checkout page header and footer
profile name wrap with ...

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <img src="custom/images/hambruger.png" class="navToggle img-responsive ">
+                        <img src="custom/images/hambruger.png" class="navToggle img-responsive img-circle">
                     </button>
                     <a class="navbar-brand" href="index.html"><img class="logo" alt="Brand" src="custom/images/logo.png"></a>
                 </div>
@@ -72,7 +72,6 @@
                             <a href="#" class="links-active" data-toggle="modal" data-target="#loginScreen" id="sign-up-button">Sign-in / Sign-up</a></li>
 							
 							<li><a href="#" class="showMenu-Mobile visible-xs links-active profile" data-toggle="modal" data-target="#cartModel" id="cart-Mobile">Cart</a></li>
-							<li><a href="#" class="showMenu-Mobile links-active profile" data-toggle="modal" data-target="#cartModel" id="cart-Mobile">Cart</a></li>
 							<li><a href="#" class="showMenu-Mobile links-active profile" data-toggle="modal" data-target="#myProfileModel" id="profile-Mobile">My Profile</a></li>
 							<li><a href="#" class="showMenu-Mobile links-active profile" data-toggle="modal" data-target="#myOrderModel" id="order-Mobile">My Order</a></li>
 							<li><a href="#" class="showMenu-Mobile links-active logout" id="logout-Mobile">Logout</a></li>                       
