--- a/check-out.html
+++ b/check-out.html
@@ -301,7 +301,7 @@
                                 <p class="list-group-item-text">Take a Glance of your food</p>
                             </a>
                         </li>
-                        <li class="">
+                        <li class="disabled">
                             <a href="#step-3">
                                 <h4 class="list-group-item-heading">Payment</h4>
                                 <p class="list-group-item-text">Secure Payment with ICICI Gateway</p>
