--- a/check-out.html
+++ b/check-out.html
@@ -48,7 +48,7 @@
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <img src="custom/images/hambruger.png" class="navToggle img-responsive ">
+                        <img src="custom/images/hambruger.png" class="navToggle img-responsive img-circle">
                     </button>
                     <a class="navbar-brand" href="index.html"><img class="logo" alt="Brand" src="custom/images/logo.png"></a>
                 </div>
@@ -72,9 +72,9 @@
                             <a href="#" class="links-active" data-toggle="modal" data-target="#loginScreen" id="sign-up-button">Sign-in / Sign-up</a></li>
 							
 							<li><a href="#" class="showMenu-Mobile visible-xs links-active profile" data-toggle="modal" data-target="#cartModel" id="cart-Mobile">Cart</a></li>
-							<li><a href="#" class="showMenu-Mobile links-active profile" data-toggle="modal" data-target="#cartModel" id="cart-Mobile">Cart</a></li>
 							<li><a href="#" class="showMenu-Mobile links-active profile" data-toggle="modal" data-target="#myProfileModel" id="profile-Mobile">My Profile</a></li>
 							<li><a href="#" class="showMenu-Mobile links-active profile" data-toggle="modal" data-target="#myOrderModel" id="order-Mobile">My Order</a></li>
+                        <li><a href="#" class="showMenu-Mobile links-active profile" data-toggle="modal" data-target="#myTrackOrderModel" id="order-Mobile">Track Order</a></li>
 							<li><a href="#" class="showMenu-Mobile links-active logout" id="logout-Mobile">Logout</a></li>                       
                     </ul>
                 </div>
@@ -90,7 +90,18 @@
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 			</div>
 			<div class="modal-body" style="height: 320px;">
-				<embed src="my-orders.html" width="100%" height="100%"></embed>
+				<iframe src="my-orders.html" width="100%" height="100%"></iframe>
+			</div>
+		</div>
+	</div>
+</div><div class="modal fade" id="myTrackOrderModel" tabindex="-1" role="dialog" aria-labelledby="myTrackOrderModel" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content" style="width: 100%;">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+			</div>
+			<div class="modal-body" style="height: 320px;">
+				<iframe src="track-orders.html" width="100%" height="100%"></iframe>
 			</div>
 		</div>
 	</div>
@@ -99,7 +110,7 @@
 	<div class="modal-dialog">
 		<div class="modal-content" style="width: 100%;">
 			<div class="modal-body">
-				<embed src="profile.html" width="100%" height="100%"></embed>
+				<iframe src="profile.html" width="100%" height="100%"></iframe>
 			</div>
 		</div>
 	</div>
@@ -548,7 +559,7 @@
                     <h4 class="modal-title">We are here !</h4>
             </div>
             <div class="modal-body" style="height: 320px;">
-				<embed src="map.html" width="100%" height="100%"></embed>
+				<iframe src="map.html" width="100%" height="100%"></iframe>
 			</div>
 		</div>
 	</div>
@@ -574,7 +585,7 @@
                     <h4 class="modal-title">We are available to serve yummy food! Please reach US</h4>
             </div>
             <div class="modal-body" style="height: 320px;">
-				<embed src="contact.html" width="100%" height="100%"></embed>
+				<iframe src="contact.html" width="100%" height="100%"></iframe>
 			</div>
 		</div>
 	</div>
