--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <img src="custom/images/hambruger.png" class="navToggle img-responsive img-circle">
+                        <img src="custom/images/defult.png" class="navToggle img-responsive img-circle">
                     </button>
                     <a class="navbar-brand" href="index.html"><img class="logo" alt="Brand" src="custom/images/logo.png"></a>
                 </div>
