--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 	<div class="modal-dialog">
 		<div class="modal-content" style="width: 100%;">
 			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-			</div>
+<button type="button" class="close bgwhite" data-dismiss="modal" aria-hidden="true">×</button>
+            </div>
 			<div class="modal-body" style="height: 320px;">
 				<iframe src="my-orders.html" width="100%" height="100%"></iframe>
 			</div>
@@ -98,8 +98,8 @@
 	<div class="modal-dialog">
 		<div class="modal-content" style="width: 100%;">
 			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-			</div>
+<button type="button" class="close bgwhite" data-dismiss="modal" aria-hidden="true">×</button>
+            </div>
 			<div class="modal-body" style="height: 320px;">
 				<iframe src="track-orders.html" width="100%" height="100%"></iframe>
 			</div>
@@ -109,6 +109,9 @@
         <div class="modal fade" id="myProfileModel" tabindex="-1" role="dialog" aria-labelledby="myProfileModel" aria-hidden="true">
 	<div class="modal-dialog">
 		<div class="modal-content" style="width: 100%;">
+        <div class="modal-header">
+<button type="button" class="close bgwhite" data-dismiss="modal" aria-hidden="true">×</button>
+            </div>
 			<div class="modal-body">
 				<iframe src="profile.html" width="100%" height="100%"></iframe>
 			</div>
@@ -121,7 +124,7 @@
     <!-- Modal content-->
     <div class="modal-content">
          <div class="modal-header">
-             <button type="button" class="close bgwhite" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+             <button type="button" class="close bgwhite" data-dismiss="modal" aria-hidden="true">×</button>
         <h2>Your cart items</h2>
         </div>
 		<div class="modal-body">
