--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
+						<button type="button" class="close bgwhite" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                         <h4 class="modal-title" id="myModalLabel"><h3 class="omb_authTitle otp_ConformPassword" align="center">Enter Mobile no to Send OTP</h3></h4>
                     </div>
                     <div class="modal-body">
